--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,142 @@ section {
     background: var(--text-color);
     border: 2px solid var(--text-color);
 }
+
+.share {
+    position: absolute;
+    bottom: 3rem;
+    left   : 15% ;
+    display: flex;
+    align-items: center;
+}
+
+.share p {
+    font-size: 17px;
+    color: var(--text-color);
+    margin-right: 25px;     
+}
+
+.social i {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    width: 45px;
+    background: linear-gradient(130.08deg ,#383528 0% ,#191919 100% );
+    box-shadow: 0px 20px 40px #00000070;
+    border : 1px solid #3b3b3b ;
+    border-radius: 50%;
+    color: var(--text-color);
+    font-size: 20px;
+    margin: 0 7px;
+    transition: all 0.6s ease-in-out;
+}
+
+.social i:hover {
+    transform: translateY(-10px);
+}
+
+@media(max-width : 1850px){
+    header {
+        padding: 15px 8%;
+        transition: .2s;
+    }
+    section {
+        padding:0 8%;
+        transition: .2s;
+    }
+    .share {
+        left: 8%;
+         transition: .2s;
+    }
+}
+
+@media(max-width : 1370px){
+    header {
+        padding: 15px 4%;
+        transition: .2s;
+    }
+    section {
+        padding:0 4%;
+        transition: .2s;
+    }
+    .share {
+        left: 4%;
+         transition: .2s;
+    }
+    :root {
+        --big-font: 5.5rem;
+        --p-font: 1rem;
+        transition: .2s;
+    }
+}
+
+@media(max-width : 1020px){
+    :root {
+        --big-font: 5rem;
+        --p-font: 1rem;
+        transition: .2s;
+    }
+    .navbar a {
+        margin: 0 15px;
+    }
+}
+
+@media(max-width : 1020px){
+    .share {
+        display: none;
+    }
+    section {
+        padding: 70px 4%;
+    }
+    header {
+        padding: 11px 4%;
+        background: #2d2d2d;
+    }
+    .home {
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .home-text {
+        order: 2;
+    }
+
+    .home-img {
+        height: auto;
+        width: auto;
+        margin: auto;
+
+    }
+    .home-img {
+        max-width: 450px;
+        max-height: 450px;
+    }
+}
+
+@media(max-width : 850px){
+   .navbar {
+    position: absolute;
+    width: 100%;
+    height: 100vh; 
+    padding: 40px 50px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    background: #2d2d2d;   
+    transition: all .4s ease-in-out;
+   } 
+
+    .navbar a {
+        display: block;
+        color: #3c3c3c;
+        padding: 0px;
+        margin: 0 0 40px 0;
+        font-size: 2rem;
+        font-weight: 400  ;
+    }
+}
+
