--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ section {
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
+    left: 100%;
     display: flex;
     flex-direction: column;
     background: #2d2d2d;   
@@ -298,5 +298,36 @@ section {
         font-size: 2rem;
         font-weight: 400  ;
     }
+    .navbar.open {
+        left: 0;
+    }
 }
 
+@media(max-width : 500px){
+    :root {
+        --big-font: 4rem;
+        --p-font: 15px;
+        transition: .2s;
+    }
+    .btn {
+        padding: 9px 28px;
+    } 
+}
+
+.home-img img {
+    animation: imgg 2s ease-in-out infinite;
+    animation-delay: 2s;
+}
+
+@keyframes imgg {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-22px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+
+}
